added the seaport modules

--- a/Literate.org
+++ b/Literate.org
@@ -1,10 +1,19 @@
 #+title: Substreams Module repo
 #+date:    2023-06-29
 
-* Tasks [1/4]
-- [ ] Add the seaport nft trade module
-- [ ] Add the superrare nft trade module
-- [ ] Complete the [[#seaport_trades]] module
+* Tasks [2/6]
+** TODO Add the superrare nft trade module
+** TODO Figure out why the filter_blur_trades module doesn't work with 1 input address
+** TODO Add some new modules for DAOs
+I have some ideas regarding interesting modules for daos.
+
+Such as tracking ownership supply, as well as who is dumping what.
+** TODO Make a plan on how to handle multi for multi trades with the seaport contracts
+Right now we are only handling trades from seaport if there is a single collection someone is trading for.
+
+We should probably also add support for many to many swaps
+** DONE Add the seaport nft trade module
+** DONE Complete the [[#seaport_trades]] module
 * Timeframe
 Not really a timeframe yet
 
@@ -13,12 +22,13 @@ This is a test of literate programming with lsp-mode in emacs
 
 To edit something, execute (lsp-org) within a code block
 To finish editing a block, execute (lsp-virtual-buffer-disconnect)
+
+Seems like our ABI parser doesn't like contracts with custom errors. So we need to trim this from the abi.
+
 ** Hotdog "types"
 :PROPERTIES:
 :CUSTOM_ID: hotdog_types
 :END:
-
-
 I am playing with this idea of hotdog "types"
 
 Which are just a standard way of having a specific structure for these hotdogs to work with in a frontend.
@@ -131,12 +141,14 @@ binaries:
     type: wasm/rust-v1
     file: ./target/wasm32-unknown-unknown/release/soulbound_modules.wasm
 #+end_src
+
 ** Params
 #+begin_src yaml
 params:
   map_events: MAP_EVENTS_PARAMS
   filter_events: FILTER_EVENTS_PARAMS
-  filter_blur_trades: FILTER_BLUR_TRADES_PARAMS
+  filter_blur_trades: "0x5Af0D9827E0c53E4799BB226655A1de152A425a5&&0x5Af0D9827E0c53E4799BB226655A1de152A425a5"
+  #filter_blur_trades: FILTER_BLUR_TRADES_PARAMS
 #+end_src
 ** Modules
 The module yaml config are exported within the module definition located at [[#substream_modules]]
@@ -317,7 +329,6 @@ impl Into<HashMap<String, ValueEnum>> for Map {
     }
 }
 #+end_src
-
 *** Hotdog helpers trait
 Some similar type conversion helpers are present in this trait
 
@@ -501,7 +512,6 @@ pub fn param_value_to_value_enum(value: &Value) -> ValueEnum {
     }
 }
 #+end_src
-
 ** General Helpers
 *** Format Hex
 #+begin_src rust
@@ -517,6 +527,8 @@ pub fn format_hex(hex: &[u8]) -> String {
 #+begin_src rust
 use crate::ValueEnum;
 use std::collections::HashMap;
+use substreams::scalar::{BigInt, BigDecimal};
+use std::str::FromStr;
 
 use crate::{pb::soulbound_modules::v1::Hotdog, helpers::HotdogHelpers};
 #+end_src
@@ -551,6 +563,13 @@ impl NftPrice {
 }
 #+end_src
 ** Type Conversions
+*** wei_to_eth
+#+begin_src rust
+fn wei_to_eth(wei: &str) -> String {
+    BigInt::from_str(wei).unwrap().to_decimal(18).to_string()
+}
+#+end_src
+
 *** blur_trade_to_nft_price
 
 Converts a blur "OrdersMatched" event into an [[#nft_price]] hotdog.
@@ -575,10 +594,22 @@ fn blur_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
         None => return Err(stringify!("map does not contain a sell field {:?}", map))
     };
 
+    let block_number = match map.get("block_number") {
+        Some(block_number) => block_number.clone(),
+        None => return Err(stringify!("map does not contain a block_number field {:?}", map))
+    };
+
     match (buy, sell) {
         (ValueEnum::MapValue(buy_map), ValueEnum::MapValue(sell_map)) => {
             let collection = buy_map.keys.get("collection").unwrap().clone();
             let price = buy_map.keys.get("price").unwrap().clone();
+            let price_string: String = match price.value.clone().unwrap() {
+                ValueEnum::StringValue(price_string) => price_string,
+                _ => return Err("price is not a string")
+            };
+
+            let price_in_eth = wei_to_eth(&price_string);
+            let price_in_eth = ValueEnum::StringValue(price_in_eth);
             let payment_token = buy_map.keys.get("paymentToken").unwrap().clone();
             let token_id = sell_map.keys.get("tokenId").unwrap().clone();
             let name = ValueEnum::StringValue("NFTPrice".to_string());
@@ -587,8 +618,11 @@ fn blur_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
             output_map.insert("hotdog_name".to_string(), name.into());
             output_map.insert("collection".to_string(), collection.into());
             output_map.insert("price".to_string(), price.into());
+            output_map.insert("price_in_eth".to_string(), price_in_eth);
+
             output_map.insert("payment_token".to_string(), payment_token.into());
             output_map.insert("token_id".to_string(), token_id.into());
+            output_map.insert("block_number".to_string(), block_number.into());
             Ok(Hotdog::from(output_map))
         }
         _ => Err("buy and sell are not maps")
@@ -600,7 +634,164 @@ Converts a seaport trade into an [[#nft_price]] hotdog
 
 #+begin_src rust
 fn seaport_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
-    todo!()
+    let name = &hotdog.hotdog_name;
+    if name != "OrderFulfilled" {
+        return Err("hotdog is not an OrderFulfilled hotdog");
+    }
+
+    let map = hotdog.to_hashmap();
+
+    let block_number = match map.get("block_number") {
+        Some(block_number) => block_number.clone(),
+        None => return Err(stringify!("map does not contain a block_number field {:?}", map))
+    };
+
+    let consideration = match map.get("consideration") {
+        Some(consideration) => consideration.clone(),
+        None => panic!("map does not contain a consideration field {:?}", hotdog)
+    };
+
+    let offer = match map.get("offer") {
+        Some(offer) => offer.clone(),
+        None => panic!("map does not contain a offer field {:?}", map)
+    };
+
+    let mut output_map: HashMap<String, ValueEnum> = HashMap::new();
+    output_map.insert("hotdog_name".to_string(), ValueEnum::StringValue("NFTPrice".to_string()));
+
+    // the whole thang goes like this:
+    // user has an nft I want
+    // I make an offer(s), an offer is a single item I am willing to give up
+    // IE I offer 1 WETH for the nft
+    // the consideration will be the NFT, and the offer will be the WETH
+    // NOTE In our case, we are only going to track trades that are one item for one item
+    match (consideration, offer) {
+        (ValueEnum::MapValue(consideration), ValueEnum::MapValue(offer)) => {
+            // the event field "offer" is an array of offers, the items spent
+            // struct SpentItem {
+            // enum ItemType itemType;
+            // address token;
+            // uint256 identifier;
+            // uint256 amount;
+            // }
+            let mut nft_value: BigInt = BigInt::zero();
+
+            for (index, offer) in offer.keys.iter() {
+                let value:ValueEnum = offer.clone().into();
+
+                let offer = match value {
+                    ValueEnum::MapValue(map) => {
+                        map
+                    },
+                    _ => panic!("offer is not a map!")
+                };
+
+                let offer = offer.keys;
+
+                let item_type = offer.get("itemType").unwrap().clone();
+
+                let item_type = match item_type.into() {
+                    ValueEnum::StringValue(item_type) => item_type,
+                    _ => panic!("item type is not a string!")
+                };
+
+                // if the item type isn't 2, it isn't an nft and we don't care about it
+                if item_type != "2" {
+                    return Ok(Hotdog::default())
+                }
+
+                let collection:ValueEnum = offer.get("token").unwrap().clone().into();
+                let token_id:ValueEnum = offer.get("identifier").unwrap().clone().into();
+
+                if let Some(existing_collection) = output_map.insert("collection".to_string(), collection.clone()) {
+                    match (existing_collection, collection) {
+                        (ValueEnum::StringValue(existing_collection), ValueEnum::StringValue(collection)) => {
+                            if existing_collection != collection {
+                                return Err("multiple collections in one hotdog");
+                            }
+                        },
+                        _ => panic!("collection is not a string!")
+                    }
+                };
+                if let Some(existing_token_id) = output_map.insert("token_id".to_string(), token_id.clone()) {
+                    match (existing_token_id, token_id) {
+                        (ValueEnum::StringValue(existing_token_id), ValueEnum::StringValue(token_id)) => {
+                            if existing_token_id != token_id {
+                                return Err("multiple token_ids in one hotdog");
+                            }
+                        },
+                        _ => panic!("token_id is not a string!")
+                    }
+                };
+            }
+
+            // the event field "consideration" is an array of considerations, this is what is being received in the trade
+            // struct ConsiderationItem {
+            // enum ItemType itemType;
+            // address token;
+            // uint256 identifierOrCriteria;
+            // uint256 endAmount;
+            // uint256 startAmount;
+            // address payable recipient;
+            // }
+            // enum ItemType {
+            // NATIVE,
+            // ERC20,
+            // ERC721,
+            // ERC1155,
+            // ERC721_WITH_CRITERIA,
+            // ERC1155_WITH_CRITERIA
+            // }
+
+            for (index, consideration) in consideration.keys.iter() {
+                let consideration: ValueEnum = consideration.clone().into();
+
+                let consideration = match consideration {
+                    ValueEnum::MapValue(map) => {
+                        map
+                    },
+                    _ => panic!("offer is not a map!")
+                };
+
+                let consideration = consideration.keys;
+
+                let item_type = consideration.get("itemType").unwrap().clone();
+                let item_type = match item_type.into() {
+                    ValueEnum::StringValue(item_type) => item_type,
+                    _ => panic!("item type is not a string!")
+                };
+
+                // if the item type is 2, it is an NFT and we don't want to track it
+                if item_type == "2" {
+                    return Ok(Hotdog::default())
+                }
+
+                let token:ValueEnum = consideration.get("token").unwrap().clone().into();
+                let amount = consideration.get("amount").unwrap().clone();
+                let amount_string: String = match amount.value.clone().unwrap() {
+                    ValueEnum::StringValue(amount_string) => amount_string,
+                    _ => return Err("amount is not a string")
+                };
+
+                let amount = BigInt::from_str(&amount_string).unwrap();
+                nft_value = nft_value + amount;
+
+                if let Some(existing_token) = output_map.insert("payment_token".to_string(), token.clone()) {
+                    match (existing_token, token) {
+                        (ValueEnum::StringValue(existing_token), ValueEnum::StringValue(token)) => {
+                            if existing_token != token {
+                                return Err("multiple payment_tokens in one hotdog");
+                            }
+                        },
+                        _ => panic!("token is not a string!")
+                    }
+                };
+            }
+            output_map.insert("price".to_string(), ValueEnum::StringValue(nft_value.to_string()));
+            Ok(Hotdog::from(output_map))
+        }
+        _ => Ok(Hotdog::default())
+    }
 }
 #+end_src
 
@@ -610,8 +801,7 @@ fn seaport_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
 :END:
 ** Rust Modules
 Literal rust modules we are using
-#+name: lib-modules
-#+begin_src rust
+#+begin_src rust :tangle src/lib.rs
 pub mod helpers;
 mod pb;
 pub mod nft_helpers;
@@ -645,7 +835,7 @@ You can repeat this pattern, so long as every contract address has a abi that fo
 The output of this module will be a [[#Hotdog]]
 
 **** Rust Code
-#+begin_src rust :noweb yes
+#+begin_src rust
 // takes an input string of address&&abi*
 #[substreams::handlers::map]
 pub fn map_events(param: String, blk: eth::Block) -> Result<Hotdogs, SubstreamError> {
@@ -696,7 +886,10 @@ pub fn map_events(param: String, blk: eth::Block) -> Result<Hotdogs, SubstreamEr
         .collect();
 
     Ok(Hotdogs{ hotdogs })
+
+
 }
+
 #+end_src
 **** Yaml Definition
 #+begin_src yaml :tangle "substreams.yaml"
@@ -805,7 +998,6 @@ pub fn all_blur_trades(blk: eth::Block) -> Result<Hotdogs, SubstreamError> {
 :PROPERTIES:
 :CUSTOM_ID: filter_blur_trades
 :END:
-
 This module takes in an input from map_events, and expects it to be tracking the blur marketplace contract.
 
 This module also takes in a param string, which is a collection address or addresses to filter trades by.
@@ -873,12 +1065,12 @@ fn filter_blur_trades(param: String, hotdogs: Hotdogs) -> Result<Hotdogs, Substr
     kind: map
     inputs:
       - params: string
-      - map: map_events
+      - map: all_blur_trades
+      #- map: map_events
     output:
       type: proto:soulbound_modules.v1.Hotdogs
 #+end_src
 *** blur_trades
-
 This module takes in filter_blur_trades as an input, and converts it to the "type" [[#nft_price]]
 
 **** Rust Code
@@ -902,8 +1094,151 @@ pub fn blur_trades(hotdogs: Hotdogs) -> Result<Hotdogs, SubstreamError> {
   - name: blur_trades
     kind: map
     inputs:
-      #- map: filter_blur_trades
-      - map: all_blur_trades
+      - map: filter_blur_trades
+    output:
+      type: proto:soulbound_modules.v1.Hotdogs
+#+end_src
+*** all_seaport_trades
+This module is the hardcoded source of all blur trades. It will replace the map_events input for [[*filter_blur_trades]]
+
+It is super similar to [[*map_events]] in how it operates, just hardcoded is all :)
+    
+**** Rust Code
+#+begin_src rust :tangle src/lib.rs
+#[substreams::handlers::map]
+pub fn all_seaport_trades(blk: eth::Block) -> Result<Hotdogs, SubstreamError> {
+    let mut contract_info: HashMap<String, Abi> = HashMap::new();
+
+    // seaport address
+    let seaport_address = "0x00000000000000ADc04C56Bf30aC9d3c0aAF14dC".to_lowercase().to_string();
+    let seaport_abi = serde_json::from_str(abi_constants::SEAPORT).unwrap();
+
+    contract_info.insert(seaport_address, seaport_abi);
+    
+    let block_hash = format_hex(&blk.hash);
+    let block_number = blk.number;
+    let block_timestamp = blk
+        .header
+        .clone()
+        .unwrap()
+        .timestamp
+        .unwrap()
+        .seconds
+        .to_string();
+
+    let hotdogs: Vec<Hotdog> = blk
+        .logs()
+        .filter_map(|log| {
+            let emitter = format_hex(log.address());
+            if let Some(abi) = contract_info.get(&emitter) {
+                log_to_hotdog(&log, block_number, &block_timestamp, &block_hash, &abi)
+            } else {
+                None
+            }
+        })
+        .collect();
+
+    Ok(Hotdogs{ hotdogs })
+}
+#+end_src
+**** Yaml Definition
+#+begin_src yaml :tangle substreams.yaml
+  - name: all_seaport_trades
+    kind: map
+    inputs:
+      - source: sf.ethereum.type.v2.Block
+    output:
+      type: proto:soulbound_modules.v1.Hotdogs
+#+end_src
+
+*** filter_seaport_trades
+:PROPERTIES:
+:CUSTOM_ID: filter_blur_trades
+:END:
+The same as the [[*filter_blur_trades]], however for seaport
+
+**** Rust Code
+#+begin_src rust :tangle src/lib.rs
+// filter all orders by a specific address
+#[substreams::handlers::map]
+fn filter_seaport_trades(param: String, hotdogs: Hotdogs) -> Result<Hotdogs, SubstreamError> {
+    let filtered_addresses: Vec<String> = param.split("&&").map(|address| address.to_lowercase()).collect::<Vec<_>>();
+
+    if filtered_addresses.len() == 1 {
+        return Ok(Hotdogs{ hotdogs: hotdogs.hotdogs })
+    }
+
+    let mut filtered_hotdogs: Vec<Hotdog> = vec![];
+
+    for hotdog in hotdogs.hotdogs {
+        if hotdog.hotdog_name != "OrderFulfilled" {
+            continue;
+        }
+
+        let map = &hotdog.to_hashmap();
+
+        let consideration = match map.get("consideration") {
+            Some(consideration) => consideration.clone(),
+            None => panic!("map does not contain a consideration field {:?}", hotdog)
+        };
+
+        let offer = match map.get("offer") {
+            Some(offer) => offer.clone(),
+            None => panic!("map does not contain a offer field {:?}", map)
+        };
+
+        match (consideration, offer) {
+            (ValueEnum::MapValue(consideration), ValueEnum::MapValue(offer)) => {
+                // the event field "offer" is an array of offers, this is what is being purchased
+                for (index, value) in offer.keys.iter() {
+                    let value:HashMap<String,ValueEnum> = match value.clone().into() {
+                        ValueEnum::MapValue(value) => value.into(),
+                        _ => continue
+                    };
+                    let collection = value.get("token").unwrap().clone();
+                    match collection {
+                        ValueEnum::StringValue(collection) => {
+                            if filtered_addresses.contains(&collection) {
+                                filtered_hotdogs.push(hotdog.clone());
+                            }
+                        }
+                        _ => {}
+                    }
+                }
+                // the event field "consideration" is an array of considerations, this is what is being sold to purchase the offer
+                for (index, value) in consideration.keys.iter() {
+                    let value:HashMap<String,ValueEnum> = match value.clone().into() {
+                        ValueEnum::MapValue(value) => value.into(),
+                        _ => continue
+                    };
+                    let collection = value.get("token").unwrap().clone();
+                    match collection {
+                        ValueEnum::StringValue(collection) => {
+                            if filtered_addresses.contains(&collection) {
+                                filtered_hotdogs.push(hotdog.clone());
+                            }
+                        }
+                        _ => {}
+                    }
+                }
+            }
+            _ => {}
+        };
+    }
+
+    Ok(Hotdogs {
+        hotdogs: filtered_hotdogs
+    })
+}
+
+#+end_src
+**** Yaml Definition
+#+begin_src yaml :tangle substreams.yaml
+  - name: filter_seaport_trades
+    kind: map
+    inputs:
+      - params: string
+      - map: all_seaport_trades
     output:
       type: proto:soulbound_modules.v1.Hotdogs
 #+end_src
@@ -932,7 +1267,7 @@ pub fn seaport_trades(hotdogs: Hotdogs) -> Result<Hotdogs, SubstreamError> {
 #+end_src
 
 **** Yaml Definition
-#+begin_src yaml :tangle substreams.yaml :tangle no
+#+begin_src yaml :tangle substreams.yaml
   - name: seaport_trades
     kind: map
     inputs:
